<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.addshoe.AddShoeFragment"
>

    <data>

        <variable
            name="mainActivityViewModel"
            type="com.udacity.shoestore.ui.MainActivityViewModel"
        />

    </data>

    <!--
        I used a LinearLayout here because everything was located right beneath the other.  I didn't
        find it complex enough to use a constraint layout.
    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical"
        android:layout_gravity="bottom"
    >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/addshoe_title_text"
            style="@style/title"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addshoe_name_label"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="24dp"
        />

        <EditText
            android:id="@+id/addshoe_input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:inputType="text"
            android:hint="@string/addshoe_name_hint"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addshoe_company_label"
            android:textSize="24sp"
            android:textColor="@android:color/black"
        />

        <EditText
            android:id="@+id/addshoe_input_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:inputType="text"
            android:hint="@string/addshoe_description_hint"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addshoe_size_label"
            android:textSize="24sp"
            android:textColor="@android:color/black"
        />

        <EditText
            android:id="@+id/addshoe_input_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:inputType="number"
            android:hint="@string/addshoe_size_hint"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addshoe_description_label"
            android:textSize="24sp"
            android:textColor="@android:color/black"
        />

        <EditText
            android:id="@+id/addshoe_input_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:inputType="text"
            android:hint="@string/addshoe_description_hint"
        />

        <Button
            android:id="@+id/addshoe_save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addshoe_button_save_text"
            android:textColor="@android:color/white"
            android:background="@drawable/button_shape_accent"
            android:layout_marginTop="16dp"
        />

        <Button
            android:id="@+id/addshoe_cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addshoe_button_cancel_text"
        />

    </LinearLayout>

</layout>
